color-profile-layer-filter.html issue

Illustration of bug and fix

BUG=730821
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2939513002
Cr-Commit-Position: refs/heads/master@{#478861}

Former-commit-id: c196efb30c8553563fd577a15d3a0572c3d2a69e